random answers bugfix; too long answer warning; rewording of questions; improvement of context image;

--- a/elastique-pub-quiz/src/app/quiz/question/question.component.sass
+++ b/elastique-pub-quiz/src/app/quiz/question/question.component.sass
@@ -15,7 +15,7 @@
     justify-content: center
 
     img
-      height: 40vh
+      max-height: 40vh
       max-width: 100%
       object-fit: scale-down
 
